--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -247,7 +247,7 @@
   <footer class="footer">
     <div class="container footer__inner">
       <p>© <span id="year"></span> John. Built with HTML, CSS &amp; JavaScript.</p>
-      <p class="footer__small">Template-inspired layout with custom styling and scripts.</p>
+      <p class="footer__small">inspired layout with custom styling and scripts.</p>
     </div>
   </footer>
 
